tests/ucc/type/good/conditional-expr-1.c
int main(void)
{
    int a = 0;
    int *c;
    char b = (char)(a == 0 ? &a :  c);

    return a;
}
