tests/ucc/type/bad/conditional-expr.c
int main(void)
{
    float a = 0;
    int *c;
    char b = (char)(a == 0 ? a : c);

    return a;
}
